Correction: à présent, dans la page de résumé du dossier, les titres et leurs espacements sont re-normalisés, ce qui permet de réaligner correctement les cadres. Au niveau technique, ajout d'une classse CSS contenant le numéro de département à la balise body du layout par défaut (ex: class="cg93 dossiers view") afin de pouvoir cibler certaines parties de CSS par département. Clôture le ticket #10620. (CG 58, 93, 976)

--- a/trunk/app/webroot/css/screen.generic.css
+++ b/trunk/app/webroot/css/screen.generic.css
@@ -1960,3 +1960,11 @@ div.col-2.droite{
 #resumeDossier .col-2 table{
 	width: 100%;
 }
+
+/* Page de résumé du dossier, taille des titres pour les départements autres que le 66 */
+body.cg58.dossiers.view #resumeDossier h1, body.cg58.dossiers.view #resumeDossier h2,
+body.cg93.dossiers.view #resumeDossier h1, body.cg93.dossiers.view #resumeDossier h2,
+body.cg976.dossiers.view #resumeDossier h1, body.cg976.dossiers.view #resumeDossier h2 {
+	font-size: 1.58em;
+	margin: 0;
+}
